TinyUSDGen/TinyUSDGen/Headers/c-tinyusd.h

/*
   NOTE: Use dedicated enum value for token[] and string[]
   (therse use C struct `c_tinyusd_token_vector` and `c_tinyusd_string_vector`
   respectively)

   Use C_TINYUSD_VALUE_1D_BIT for other numerical value type to represent 1D
   array.
*/
typedef enum {
  C_TINYUSD_VALUE_UNKNOWN,
  C_TINYUSD_VALUE_TOKEN,
  C_TINYUSD_VALUE_TOKEN_VECTOR, /* token[] */
  C_TINYUSD_VALUE_STRING,
  C_TINYUSD_VALUE_STRING_VECTOR, /* string[] */
  C_TINYUSD_VALUE_BOOL,
  C_TINYUSD_VALUE_HALF,
  C_TINYUSD_VALUE_HALF2,
  C_TINYUSD_VALUE_HALF3,
  C_TINYUSD_VALUE_HALF4,
  C_TINYUSD_VALUE_INT,
  C_TINYUSD_VALUE_INT2,
  C_TINYUSD_VALUE_INT3,
  C_TINYUSD_VALUE_INT4,
  C_TINYUSD_VALUE_UINT,
  C_TINYUSD_VALUE_UINT2,
  C_TINYUSD_VALUE_UINT3,
  C_TINYUSD_VALUE_UINT4,
  C_TINYUSD_VALUE_INT64,
  C_TINYUSD_VALUE_UINT64,
  C_TINYUSD_VALUE_FLOAT,
  C_TINYUSD_VALUE_FLOAT2,
  C_TINYUSD_VALUE_FLOAT3,
  C_TINYUSD_VALUE_FLOAT4,
  C_TINYUSD_VALUE_DOUBLE,
  C_TINYUSD_VALUE_DOUBLE2,
  C_TINYUSD_VALUE_DOUBLE3,
  C_TINYUSD_VALUE_DOUBLE4,
  C_TINYUSD_VALUE_QUATH,
  C_TINYUSD_VALUE_QUATF,
  C_TINYUSD_VALUE_QUATD,
  C_TINYUSD_VALUE_COLOR3H,
  C_TINYUSD_VALUE_COLOR3F,
  C_TINYUSD_VALUE_COLOR3D,
  C_TINYUSD_VALUE_COLOR4H,
  C_TINYUSD_VALUE_COLOR4F,
  C_TINYUSD_VALUE_COLOR4D,
  C_TINYUSD_VALUE_TEXCOORD2H,
  C_TINYUSD_VALUE_TEXCOORD2F,
  C_TINYUSD_VALUE_TEXCOORD2D,
  C_TINYUSD_VALUE_TEXCOORD3H,
  C_TINYUSD_VALUE_TEXCOORD3F,
  C_TINYUSD_VALUE_TEXCOORD3D,
  C_TINYUSD_VALUE_NORMAL3H,
  C_TINYUSD_VALUE_NORMAL3F,
  C_TINYUSD_VALUE_NORMAL3D,
  C_TINYUSD_VALUE_VECTOR3H,
  C_TINYUSD_VALUE_VECTOR3F,
  C_TINYUSD_VALUE_VECTOR3D,
  C_TINYUSD_VALUE_POINT3H,
  C_TINYUSD_VALUE_POINT3F,
  C_TINYUSD_VALUE_POINT3D,
  C_TINYUSD_VALUE_MATRIX2D,
  C_TINYUSD_VALUE_MATRIX3D,
  C_TINYUSD_VALUE_MATRIX4D,
  C_TINYUSD_VALUE_FRAME4D,
  C_TINYUSD_VALUE_DICTIONARY, /* tinyusdz::value::CustomData. VtDictionary equivalent in pxrUSD */
  C_TINYUSD_VALUE_END, /* terminator */
} CTinyUSDValueType;
/* NOTE: No `Geom` prefix to usdGeom prims in C API. */
typedef enum {
  C_TINYUSD_PRIM_UNKNOWN,
  C_TINYUSD_PRIM_MODEL,
  C_TINYUSD_PRIM_SCOPE,
  C_TINYUSD_PRIM_XFORM,
  C_TINYUSD_PRIM_MESH,
  C_TINYUSD_PRIM_GEOMSUBSET,
  C_TINYUSD_PRIM_MATERIAL,
  C_TINYUSD_PRIM_SHADER,
  C_TINYUSD_PRIM_CAMERA,
  C_TINYUSD_PRIM_SPHERE_LIGHT,
  C_TINYUSD_PRIM_DISTANT_LIGHT,
  C_TINYUSD_PRIM_RECT_LIGHT,
  /* TODO: Add more prim types... */
  C_TINYUSD_PRIM_END,
} CTinyUSDPrimType;
/*
   Assume struct elements will be tightly packed in C11.
   TODO: Ensure struct elements are tightly packed.
 */
typedef struct {
  int x;
  int y;
} c_tinyusd_int2_t;
typedef struct {
  int x;
  int y;
  int z;
} c_tinyusd_int3_t;
typedef struct {
  int x;
  int y;
  int z;
  int w;
} c_tinyusd_int4_t;
typedef struct {
  float x;
  float y;
} c_tinyusd_float2_t;
typedef struct {
  float x;
  float y;
  float z;
} c_tinyusd_float3_t;
typedef struct {
  float x;
  float y;
  float z;
  float w;
} c_tinyusd_float4_t;
/*   opaque pointer to `std::vector<tinyusd::value::token>`. */
typedef struct c_tinyusd_token_vector_t c_tinyusd_token_vector_t;
/* opaque pointer to `std::string`.*/
typedef struct c_tinyusd_string_t c_tinyusd_string_t;
/*  opaque pointer to tinyusdz::value::Value */
typedef struct CTinyUSDValue CTinyUSDValue;
C_TINYUSD_EXPORT CTinyUSDValue *c_tinyusd_value_new_float4(
    c_tinyusd_float4_t val);
/*   TODO: List up other types... */

/* Check if the content of Value is the type of `value_type` */
C_TINYUSD_EXPORT int c_tinyusd_value_is_type(const CTinyUSDValue *value, CTinyUSDValueType value_type);
/*
   Get the actual value in CTinyUSDValue by specifying the type.
   NOTE: Datas are copied.
   Returns 1 upon success, 0 failed(e.g. Value is invalid, type mismatch).
 */
C_TINYUSD_EXPORT int c_tinyusd_value_as_int(const CTinyUSDValue *value, int *val);
C_TINYUSD_EXPORT int c_tinyusd_value_as_int2(const CTinyUSDValue *value, c_tinyusd_int2_t *val);
C_TINYUSD_EXPORT int c_tinyusd_value_as_int3(const CTinyUSDValue *value, c_tinyusd_int3_t *val);
C_TINYUSD_EXPORT int c_tinyusd_value_as_int4(const CTinyUSDValue *value, c_tinyusd_int4_t *val);
C_TINYUSD_EXPORT int c_tinyusd_value_as_float(const CTinyUSDValue *value, float *val);
C_TINYUSD_EXPORT int c_tinyusd_value_as_float2(const CTinyUSDValue *value, c_tinyusd_float2_t *val);
C_TINYUSD_EXPORT int c_tinyusd_value_as_float3(const CTinyUSDValue *value, c_tinyusd_float3_t *val);
C_TINYUSD_EXPORT int c_tinyusd_value_as_float4(const CTinyUSDValue *value, c_tinyusd_float4_t *val);
/*   TODO: List up other types... */


/*
   New Value with 1D array ofspecific type.
   NOTE: Array data is copied.
 */
C_TINYUSD_EXPORT CTinyUSDValue *c_tinyusd_value_new_array_int(uint64_t n,
                                                              const int *vals);
C_TINYUSD_EXPORT CTinyUSDValue *c_tinyusd_value_new_array_int2(
    uint64_t n, const c_tinyusd_int2_t *vals);
C_TINYUSD_EXPORT CTinyUSDValue *c_tinyusd_value_new_array_int3(
    uint64_t n, const c_tinyusd_int3_t *vals);
C_TINYUSD_EXPORT CTinyUSDValue *c_tinyusd_value_new_array_int4(
    uint64_t n, const c_tinyusd_int4_t *vals);
C_TINYUSD_EXPORT CTinyUSDValue *c_tinyusd_value_new_array_float(uint64_t n,
                                                                const float *vals);
C_TINYUSD_EXPORT CTinyUSDValue *c_tinyusd_value_new_array_float2(
    uint64_t n, const c_tinyusd_float2_t *vals);
C_TINYUSD_EXPORT CTinyUSDValue *c_tinyusd_value_new_array_float3(
    uint64_t n, const c_tinyusd_float3_t *vals);
C_TINYUSD_EXPORT CTinyUSDValue *c_tinyusd_value_new_array_float4(
    uint64_t n, const c_tinyusd_float4_t *vals);
/*   TODO: List up other types... */

/* opaque pointer to tinyusdz::Path */
typedef struct CTinyUSDPath CTinyUSDPath;
/* opaque pointer to tinyusdz::Property */
typedef struct CTinyUSDProperty CTinyUSDProperty;
/* opaque pointer to tinyusdz::Relationship */
typedef struct CTinyUSDRelationship CTinyUSDRelationship;
CTinyUSDRelationship *c_tinyusd_relationsip_new(uint32_t n,
                                                const char **targetPaths);
C_TINYUSD_EXPORT int c_tinyusd_relationsip_free(CTinyUSDRelationship *rel);
C_TINYUSD_EXPORT int c_tinyusd_relationsip_is_blocked(
    const CTinyUSDRelationship *rel);
/* Returns 0 = declaration only(e.g. `rel myrel`) */
C_TINYUSD_EXPORT uint32_t
c_tinyusd_relationsip_num_targetPaths(const CTinyUSDRelationship *rel);
/*
   Get i'th targetPath
   Returned `targetPath` is just a reference, so no need to free it.
 */
C_TINYUSD_EXPORT int c_tinyusd_relationsip_get_targetPath(
    const CTinyUSDRelationship *rel, uint32_t i, CTinyUSDPath *targetPath);
/*   opaque pointer to tinyusdz::Attribute */
typedef struct CTinyUSDAttribute CTinyUSDAttribute;
C_TINYUSD_EXPORT int c_tinyusd_attribute_connection_set(
    CTinyUSDAttribute *attr, const CTinyUSDPath *connectionPath);
C_TINYUSD_EXPORT int c_tinyusd_attribute_connections_set(
    CTinyUSDAttribute *attr, uint32_t n, const CTinyUSDPath *connectionPaths);
C_TINYUSD_EXPORT int c_tinyusd_attribute_meta_set(
    CTinyUSDAttribute *attr, const char *meta_name, const CTinyUSDValue *value);
/*
   Get metadata value.
   Returns 0 when `attr` is nullptr.
   Returns -1 when requested metadata is not authored.
   `value` is just a pointer so no need to free it(the pointer is valid until `attr` is modified/deleted)
 */
C_TINYUSD_EXPORT int c_tinyusd_attribute_meta_get(
    CTinyUSDAttribute *attr, const char *meta_name, const CTinyUSDValue **value);
C_TINYUSD_EXPORT int c_tinyusd_property_new(CTinyUSDProperty *prop);
C_TINYUSD_EXPORT int c_tinyusd_property_new_attribute(
    CTinyUSDProperty *prop, const CTinyUSDAttribute *attr);
C_TINYUSD_EXPORT int c_tinyusd_property_new_relationship(
    CTinyUSDProperty *prop, const CTinyUSDRelationship *rel);
C_TINYUSD_EXPORT int c_tinyusd_property_free(CTinyUSDProperty *prop);
C_TINYUSD_EXPORT int c_tinyusd_property_set_attribute(
    CTinyUSDProperty *prop, const CTinyUSDAttribute *attr);
C_TINYUSD_EXPORT int c_tinyusd_property_set_relationship(
    CTinyUSDProperty *prop, const CTinyUSDRelationship *rel);
C_TINYUSD_EXPORT int c_tinyusd_property_is_attribute(const CTinyUSDProperty *prop);
C_TINYUSD_EXPORT int c_tinyusd_property_is_attribute_connection(
    const CTinyUSDProperty *prop);
C_TINYUSD_EXPORT int c_tinyusd_property_is_relationship(const CTinyUSDProperty *prop);
C_TINYUSD_EXPORT int c_tinyusd_property_is_custom(const CTinyUSDProperty *prop);
C_TINYUSD_EXPORT int c_tinyusd_property_is_varying(const CTinyUSDProperty *prop);
typedef struct CTinyUSDPrim CTinyUSDPrim;
/*
   Create Prim with name.
   Will create a builtin Prim when `prim_type` is a builtin Prim name(e.g.
   "Xform")
   Otherwise create a Model Prim(Generic Prim).
   Return nullptr when `prim_type` is null or `prim_type` contains invalid
   character (A character which cannot be used for Prim type name(e.g. '%') and
   fills `err` with error message.
   (App need to free `err` after using it.)
 */
C_TINYUSD_EXPORT CTinyUSDPrim *c_tinyusd_prim_new(const char *prim_type,
                                 c_tinyusd_string_t *err);
/* Create Prim with builtin Prim type.
   Returns nullptr when invalid `prim_type` enum value is provided.
 */

C_TINYUSD_EXPORT CTinyUSDPrim *c_tinyusd_prim_new_builtin(CTinyUSDPrimType prim_type);
C_TINYUSD_EXPORT int c_tinyusd_prim_to_string(const CTinyUSDPrim *prim,
                                              c_tinyusd_string_t *str);
C_TINYUSD_EXPORT int c_tinyusd_prim_free(CTinyUSDPrim *prim);
/* Prim type as a const char pointer.
   Returns nullptr when `prim` is invalid */
C_TINYUSD_EXPORT const char *c_tinyusd_prim_type(const CTinyUSDPrim *prim);
/*
   Return the element name of Prim(e.g. "root", "pbr", "xform0").
   Return NULL when input `prim` is invalid.
   Returned char pointer is valid until Prim is modified or deleted.
 */
C_TINYUSD_EXPORT const char *c_tinyusd_prim_element_name(
    const CTinyUSDPrim *prim);
/*
   Get list of property names as token array.

   @param[in] prim Prim
   @param[out] prop_names Property names. Please initialize this instance using
   `c_tinyusd_token_vector_new` beforehand.

   @return 1 upon success(even when len(property names) == 0). 0 failure.
 */
C_TINYUSD_EXPORT int c_tinyusd_prim_get_property_names(
    const CTinyUSDPrim *prim, c_tinyusd_token_vector_t *prop_names_out);
/*
   Get Prim's property. Returns 0 when property `prop_name` does not exist in
   the Prim. `prop` just holds pointer to corresponding C++ Property instance,
   so no free operation required.
 */
C_TINYUSD_EXPORT int c_tinyusd_prim_property_get(const CTinyUSDPrim *prim,
                                                 const char *prop_name,
                                                 CTinyUSDProperty *prop);
/*
   Add property to the Prim.
   It copies the content of `prop`, so please free `prop` after this add
   operation. Returns 0 when the operation failed(`err` will be returned. Please
   free `err` after using it)
 */
C_TINYUSD_EXPORT int c_tinyusd_prim_property_add(CTinyUSDPrim *prim,
                                                 const char *prop_name,
                                                 const CTinyUSDProperty *prop,
                                                 c_tinyusd_string_t *err);
/*
   Delete a property in the Prim.
   Returns 0 when `prop_name` does not exist in the prim.
 */
C_TINYUSD_EXPORT int c_tinyusd_prim_property_del(CTinyUSDPrim *prim,
                                                 const char *prop_name);
/*
   Set Prim metadatum.
   Return 0 when Value type mismatch for builtin metadata.
 */
C_TINYUSD_EXPORT int c_tinyusd_prim_meta_set(CTinyUSDPrim *prim,
                                             const char *meta_name,
                                             const CTinyUSDValue *value);
/*
   Get Prim metadatum.
   Return 0 when requested metadatum is not authord or invalid.
   Returned `value` is just a pointer, so no need to free it(and the pointer is valid unless `prim` is modified/deleted.
 */
C_TINYUSD_EXPORT int c_tinyusd_prim_meta_get(CTinyUSDPrim *prim,
                                             const char *meta_name,
                                             const CTinyUSDValue **value);
/*
   Check if requested metadatum is authored.
   Return 1: authored. 0 not authored.
 */
C_TINYUSD_EXPORT int c_tinyusd_prim_meta_authored(CTinyUSDPrim *prim,
                                             const char *meta_name);
/*
   Append Prim to `prim`'s children. child Prim object is *COPIED*.
   So need to free child Prim after the append_child operation.
 */

C_TINYUSD_EXPORT int c_tinyusd_prim_append_child(CTinyUSDPrim *prim,
                                                 CTinyUSDPrim *child);