TinyUSDGen/Evergine.Bindings.TinyUSD/Generated/Funtions.cs


		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr c_tinyusd_value_new_float4(c_tinyusd_float4_t val);

		/// <summary>
		/// Check if the content of Value is the type of `value_type` 
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_value_is_type(IntPtr value, CTinyUSDValueType value_type);

		/// <summary>
		/// Get the actual value in CTinyUSDValue by specifying the type.
		/// NOTE: Datas are copied.
		/// Returns 1 upon success, 0 failed(e.g. Value is invalid, type mismatch).
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_value_as_int(IntPtr value, int* val);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_value_as_int2(IntPtr value, c_tinyusd_int2_t* val);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_value_as_int3(IntPtr value, c_tinyusd_int3_t* val);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_value_as_int4(IntPtr value, c_tinyusd_int4_t* val);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_value_as_float(IntPtr value, float* val);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_value_as_float2(IntPtr value, c_tinyusd_float2_t* val);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_value_as_float3(IntPtr value, c_tinyusd_float3_t* val);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_value_as_float4(IntPtr value, c_tinyusd_float4_t* val);

		/// <summary>
		/// New Value with 1D array ofspecific type.
		/// NOTE: Array data is copied.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr c_tinyusd_value_new_array_int(ulong n, int* vals);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr c_tinyusd_value_new_array_int2(ulong n, c_tinyusd_int2_t* vals);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr c_tinyusd_value_new_array_int3(ulong n, c_tinyusd_int3_t* vals);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr c_tinyusd_value_new_array_int4(ulong n, c_tinyusd_int4_t* vals);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr c_tinyusd_value_new_array_float(ulong n, float* vals);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr c_tinyusd_value_new_array_float2(ulong n, c_tinyusd_float2_t* vals);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr c_tinyusd_value_new_array_float3(ulong n, c_tinyusd_float3_t* vals);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr c_tinyusd_value_new_array_float4(ulong n, c_tinyusd_float4_t* vals);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr c_tinyusd_relationsip_new(uint n, [MarshalAs(UnmanagedType.LPStr)] string targetPaths);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_relationsip_free(IntPtr rel);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_relationsip_is_blocked(IntPtr rel);

		/// <summary>
		/// Returns 0 = declaration only(e.g. `rel myrel`) 
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern uint c_tinyusd_relationsip_num_targetPaths(IntPtr rel);

		/// <summary>
		/// Get i'th targetPath
		/// Returned `targetPath` is just a reference, so no need to free it.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_relationsip_get_targetPath(IntPtr rel, uint i, IntPtr targetPath);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_attribute_connection_set(IntPtr attr, IntPtr connectionPath);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_attribute_connections_set(IntPtr attr, uint n, IntPtr connectionPaths);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_attribute_meta_set(IntPtr attr, [MarshalAs(UnmanagedType.LPStr)] string meta_name, IntPtr value);

		/// <summary>
		/// Get metadata value.
		/// Returns 0 when `attr` is nullptr.
		/// Returns -1 when requested metadata is not authored.
		/// `value` is just a pointer so no need to free it(the pointer is valid until `attr` is modified/deleted)
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_attribute_meta_get(IntPtr attr, [MarshalAs(UnmanagedType.LPStr)] string meta_name, IntPtr value);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_property_new(IntPtr prop);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_property_new_attribute(IntPtr prop, IntPtr attr);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_property_new_relationship(IntPtr prop, IntPtr rel);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_property_free(IntPtr prop);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_property_set_attribute(IntPtr prop, IntPtr attr);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_property_set_relationship(IntPtr prop, IntPtr rel);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_property_is_attribute(IntPtr prop);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_property_is_attribute_connection(IntPtr prop);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_property_is_relationship(IntPtr prop);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_property_is_custom(IntPtr prop);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_property_is_varying(IntPtr prop);

		/// <summary>
		/// Create Prim with name.
		/// Will create a builtin Prim when `prim_type` is a builtin Prim name(e.g.
		/// "Xform")
		/// Otherwise create a Model Prim(Generic Prim).
		/// Return nullptr when `prim_type` is null or `prim_type` contains invalid
		/// character (A character which cannot be used for Prim type name(e.g. '%') and
		/// fills `err` with error message.
		/// (App need to free `err` after using it.)
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr c_tinyusd_prim_new([MarshalAs(UnmanagedType.LPStr)] string prim_type, IntPtr err);

		/// <summary>
		/// Create Prim with builtin Prim type.
		/// Returns nullptr when invalid `prim_type` enum value is provided.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr c_tinyusd_prim_new_builtin(CTinyUSDPrimType prim_type);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_prim_to_string(IntPtr prim, IntPtr str);

		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_prim_free(IntPtr prim);

		/// <summary>
		/// Prim type as a const char pointer.
		/// Returns nullptr when `prim` is invalid 
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern string c_tinyusd_prim_type(IntPtr prim);

		/// <summary>
		/// Return the element name of Prim(e.g. "root", "pbr", "xform0").
		/// Return NULL when input `prim` is invalid.
		/// Returned char pointer is valid until Prim is modified or deleted.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern string c_tinyusd_prim_element_name(IntPtr prim);

		/// <summary>
		/// Get list of property names as token array.
		/// 
		/// 
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_prim_get_property_names(IntPtr prim, IntPtr prop_names_out);

		/// <summary>
		/// Get Prim's property. Returns 0 when property `prop_name` does not exist in
		/// the Prim. `prop` just holds pointer to corresponding C++ Property instance,
		/// so no free operation required.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_prim_property_get(IntPtr prim, [MarshalAs(UnmanagedType.LPStr)] string prop_name, IntPtr prop);

		/// <summary>
		/// Add property to the Prim.
		/// It copies the content of `prop`, so please free `prop` after this add
		/// operation. Returns 0 when the operation failed(`err` will be returned. Please
		/// free `err` after using it)
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_prim_property_add(IntPtr prim, [MarshalAs(UnmanagedType.LPStr)] string prop_name, IntPtr prop, IntPtr err);

		/// <summary>
		/// Delete a property in the Prim.
		/// Returns 0 when `prop_name` does not exist in the prim.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_prim_property_del(IntPtr prim, [MarshalAs(UnmanagedType.LPStr)] string prop_name);

		/// <summary>
		/// Set Prim metadatum.
		/// Return 0 when Value type mismatch for builtin metadata.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_prim_meta_set(IntPtr prim, [MarshalAs(UnmanagedType.LPStr)] string meta_name, IntPtr value);

		/// <summary>
		/// Get Prim metadatum.
		/// Return 0 when requested metadatum is not authord or invalid.
		/// Returned `value` is just a pointer, so no need to free it(and the pointer is valid unless `prim` is modified/deleted.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_prim_meta_get(IntPtr prim, [MarshalAs(UnmanagedType.LPStr)] string meta_name, IntPtr value);

		/// <summary>
		/// Check if requested metadatum is authored.
		/// Return 1: authored. 0 not authored.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_prim_meta_authored(IntPtr prim, [MarshalAs(UnmanagedType.LPStr)] string meta_name);

		/// <summary>
		/// Append Prim to `prim`'s children. child Prim object is *COPIED*.
		/// So need to free child Prim after the append_child operation.
		/// </summary>
		[DllImport("c-tinyusd", CallingConvention = CallingConvention.Cdecl)]
		public static extern int c_tinyusd_prim_append_child(IntPtr prim, IntPtr child);
